--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,19 @@ url: http://site-url-here.com
 # baseurl: /base-url-here
 description: Description of site here
 
-highlighter: pygments
-permalink: pretty
-
 author: 
   name: Katy DeCorah
   email: katydecorah@gmail.com
   uri: http://katydecorah.com
-  twitter: "@katydecorah"
+  twitter: katydecorah
+
+twitter: 
+  username: katydecorah
+
+logo: http://placehold.it/300
+image: http://placehold.it/300
+
+permalink: pretty
 
 sass:
   style: :compressed
@@ -28,6 +33,7 @@ gems:
 - jekyll-redirect-from
 - jekyll-sitemap
 - jekyll-feed
+- jekyll-seo-tag
 
 markdown: kramdown
 kramdown:
@@ -36,7 +42,6 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
-  use_coderay: false
 
 defaults:
   - scope:
@@ -46,4 +51,4 @@ defaults:
       layout: "post"
 
 # CDN versions
-jquery: 2.1.4
+jquery: 2.2.4
